// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings matches snapshot when OBS socket is disabled 1`] = `
"<ipl-error-display-stub class="m-b-8"></ipl-error-display-stub>
<!---->
<div data-v-11cc5f1c="" class="ipl-space color-dark clickable layout horizontal m-t-8" data-test="open-sidebar-button">
  <font-awesome-icon-stub icon="bars" border="false" fixedwidth="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" class="large-icon m-r-8"></font-awesome-icon-stub> All Settings
</div>
<obs-socket-settings-stub class="m-t-8"></obs-socket-settings-stub>
<!--v-if-->"
`;

exports[`Settings matches snapshot when section general is selected 1`] = `
"<ipl-error-display-stub class="m-b-8"></ipl-error-display-stub>
<!---->
<div data-v-11cc5f1c="" class="ipl-space color-dark clickable layout horizontal m-t-8" data-test="open-sidebar-button">
  <font-awesome-icon-stub icon="bars" border="false" fixedwidth="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" class="large-icon m-r-8"></font-awesome-icon-stub> All Settings
</div>
<runtime-config-stub class="m-t-8"></runtime-config-stub>"
`;

exports[`Settings matches snapshot when section lastfm is selected 1`] = `
"<ipl-error-display-stub class="m-b-8"></ipl-error-display-stub>
<!---->
<div data-v-11cc5f1c="" class="ipl-space color-dark clickable layout horizontal m-t-8" data-test="open-sidebar-button">
  <font-awesome-icon-stub icon="bars" border="false" fixedwidth="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" class="large-icon m-r-8"></font-awesome-icon-stub> All Settings
</div>
<lastfm-settings-stub class="m-t-8"></lastfm-settings-stub>"
`;

exports[`Settings matches snapshot when section obs-socket is selected 1`] = `
"<ipl-error-display-stub class="m-b-8"></ipl-error-display-stub>
<!---->
<div data-v-11cc5f1c="" class="ipl-space color-dark clickable layout horizontal m-t-8" data-test="open-sidebar-button">
  <font-awesome-icon-stub icon="bars" border="false" fixedwidth="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" class="large-icon m-r-8"></font-awesome-icon-stub> All Settings
</div>
<obs-socket-settings-stub class="m-t-8"></obs-socket-settings-stub>
<obs-data-picker-stub class="m-t-8"></obs-data-picker-stub>"
`;

exports[`Settings matches snapshot when section radia is selected 1`] = `
"<ipl-error-display-stub class="m-b-8"></ipl-error-display-stub>
<!---->
<div data-v-11cc5f1c="" class="ipl-space color-dark clickable layout horizontal m-t-8" data-test="open-sidebar-button">
  <font-awesome-icon-stub icon="bars" border="false" fixedwidth="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" class="large-icon m-r-8"></font-awesome-icon-stub> All Settings
</div>
<radia-settings-stub class="m-t-8"></radia-settings-stub>"
`;
